Created content and added scrolling functions

--- a/_pages/about/about.html
+++ b/_pages/about/about.html
@@ -1,3 +1,18 @@
 <div id= "frame_about" class="frame">
-	ABOUT
+	<div style="position:relative; width: 100%; height:100%;">
+		<div id="about_textbox_wrapper">
+      		<div id="about_textbox">
+          		<p><span style="font-size: 95px;">About Me</span></p>
+          		<div id="about_textbox-paragraph">
+            		<p>My name is Cody Smith, and this is my from-scratch digital home and playground</p>
+            		<p>I'm currently studying Computer Engineering with an SE Option at Rochester Institute of Technology</p>
+            		<p>In the past I've been a Web Developer, Graphic Designer, Software Developer, QA Team Member, Mobile App Developer, and more</p>
+            		<p>I love good design and am always in its pursuit</p>
+      	    	</div>
+      		</div>
+    	</div>
+    	<!-- Parallax Triangle layers -->
+		<div id="about-background_1"> </div>
+		<div id="about-background_2"> </div>
+	</div>
 </div>
