Created content and added scrolling functions

--- a/_pages/home/home.html
+++ b/_pages/home/home.html
@@ -1,3 +1,16 @@
 <div id= "frame_home" class="frame">
-	HOMEPAGE
+	
+	<div style="position:relative; width: 100%; height:100%;">
+	
+		<div id="home-textbox_wrapper">
+			<div id="home-textbox">
+				<span id="home-welcome_title" class="font-effect-3d-float">Welcome</span>
+				<span class="font-effect-3d-float">to the digital home of Cody Smith</span>
+			</div>
+		</div>
+		
+		<div id="home_background"> </div>
+	
+	</div>
+	
 </div>
