--- a/_pages/projects/projects.html
+++ b/_pages/projects/projects.html
@@ -1,3 +1,17 @@
 <div id= "frame_projects" class="frame">
-	PROJECTS
+	<div style="position:relative; width: 100%; height:100%;">
+		<div style="width:100%; height:100%; display:table; z-index: 5; position: relative;">
+    		<span id="projects-heading" style="display: table-cell; vertical-align: middle; text-align: center;z-index: 5">
+    			Coming Soon
+    			<p>
+    				In the meantime, please check out my
+    				<a href="https://github.com/codysmithd?tab=repositories" style="">GitHub Repositories</a>
+    			</p>
+    		</span>
+    	</div>
+    	<!-- Parallax Triangle layers -->
+		<div id="projects-background_1"> </div>
+		<div id="projects-background_2"> </div>
+		<div id="projects-background_3"> </div>
+	</div>
 </div>
