Created content and added scrolling functions

--- a/_pages/the_grid/the_grid.html
+++ b/_pages/the_grid/the_grid.html
@@ -1,3 +1,6 @@
 <div id= "frame_the_grid" class="frame">
-	THE GRID
+	<div style="position:relative; width: 100%; height:100%;">
+		<div id="the_grid-background"> </div>
+		<div id="the_grid-background_2"> </div>
+	</div>
 </div>
