--- a/_pages/_404/404.html
+++ b/_pages/_404/404.html
@@ -1,1 +1,11 @@
-404 PAGE
+<div id="_404_frame">
+	<a href="/">
+		<div id="_404_text_wrapper">
+			<div id="_404_text">
+					<div>404</div>
+					ERROR
+			</div>
+		</div>
+		<div id="_404_background-layer1"> </div>
+	</a>
+</div>
