--- a/_pages/home/home.html
+++ b/_pages/home/home.html
@@ -9,7 +9,7 @@
 			</div>
 		</div>
 		
-		<div id="home_background_mask"> </div>
+		<canvas id="home-canvas_snowstorm"> </canvas>
 		<div id="home_background"> </div>
 	
 	</div>
