Added Video CSS, Style Update

--- a/_pages/about/about.html
+++ b/_pages/about/about.html
@@ -1,5 +1,6 @@
 <div id= "frame_about" class="frame">
 	<div style="position:relative; width: 100%; height:100%;">
+		
 		<div id="about_textbox_wrapper">
       		<div id="about_textbox">
           		<p><span style="font-size: 95px;">About Me</span></p>
@@ -11,8 +12,11 @@
       	    	</div>
       		</div>
     	</div>
-    	<!-- Parallax Triangle layers -->
-		<div id="about-background_1"> </div>
-		<div id="about-background_2"> </div>
+    	
+    	<video id="about_video" preload="yes" autoplay="autoplay" loop="loop" width="auto" height="100%"
+    	poster="/_pages/about/about_video_bg_poster.png">
+    		<source src="/_pages/about/about_video_bg.mp4" type="video/mp4">
+ 		</video>
+    	
 	</div>
 </div>
